--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,6 +6,10 @@
 //common
 @import "common/main";
 @import "common/index";
-
+@import "common/about";
+@import "common/blog";
+@import "common/my-works";
 //blocks
 @import "common/blocks/form";
+@import "common/blocks/hamburger";
+@import "common/blocks/header-socials";
