--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -4,7 +4,7 @@ block wrapper
         .greeting
             .greeting__autoriz-btn
                 a.greeting__autoriz-link(href="#") Авторизоваться
-            .greting__autoriz-block.autoriz-block.greting__autoriz-block--back
+            .greting__autoriz-block.name-block
                 div(style='background-image:url(styles/images/myPhoto.jpg)').autoriz-block-photo-block.circle-photo__block
                     img.circle-photo__photo(src="styles/images/myPhoto.jpg", alt="myPhoto").visuallyhidden
                 .autoriz-block-name-block
@@ -34,7 +34,7 @@ block wrapper
                         li.block__btns-item
                           a.block__btns-link(href="#") На главную 
                         li.block__btns-item
-                            a.block__btns-link(href="#") Войти
+                            a.block__btns-link(href="#" form="autoriz") Войти
 
             .greeting__copyright
                 span.greeting__copyright-name &copy; Иван Исаков
