--- a/src/templates/pages/layouts/form.pug
+++ b/src/templates/pages/layouts/form.pug
@@ -1,4 +1,4 @@
-form.form(action="")
+form.form(action="")#autoriz
     .form-block
         .form-block__row
             label.form-block__label(for="login")
