--- a/src/styles/common/index.scss
+++ b/src/styles/common/index.scss
@@ -1,5 +1,5 @@
 .wrapper{
-    height: 100vh;
+    height: 100%;
     width: 100%;
 }
 .greeting{
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    height: 100%;
+    height: 100vh;
     width: 100%;
 }
 .greeting__autoriz-btn{
@@ -113,11 +113,11 @@
 .autoriz-block-name{
     font-family: $roM;
     font-size: 28px;
-    color: $grey;
+    color: $gray;
 }
 .autoriz-block-personal{
     font-family: $roR;
-    color: $grey;
+    color: $gray;
 }
 .socials{
     display: flex;
@@ -144,6 +144,7 @@
 .block__btns{
     position: absolute;
     bottom: 0;
+    left: 0;
     width: 100%;
 
 }
@@ -189,7 +190,7 @@
     display: none;
     font-family: $bernierR;
     font-size: 35px;
-    color: $grey;
+    color: $gray;
     position: relative;
     margin-top: 33px;
     margin-bottom: 33px;
@@ -197,7 +198,7 @@
         content: "—"; 
         width: 24px;
         height: 5px;
-        color: lighten($color: $grey, $amount: 30%);
+        color: lighten($color: $gray, $amount: 30%);
         margin-right: 20px;
         
     }
@@ -205,7 +206,7 @@
         content: "—"; 
         width: 24px;
         height: 5px;
-        color: lighten($color: $grey, $amount: 30%);
+        color: lighten($color: $gray, $amount: 30%);
         margin-left: 20px;
         
     }
@@ -222,6 +223,10 @@
 .greeting__copyright{
     position: absolute;
     bottom: 4%;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;;
     font-family: $roL;
     opacity: 0.8;
 }
