--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -4,10 +4,39 @@ html
         meta(charset = 'utf-8')
         meta(name='viewport', content="initial-scale=1.0, width=device-width")
         link(rel="stylesheet", href="styles/css/app.min.css")
+        
         block title
             title Добро пожаловать
     body
         block wrapper
             .wrapper
-               
+                header.header
+                    .header__bg-block
+                        .header__bg
+                    .header__nav-block
+                        include pages/layouts/header-socials
+                        include pages/layouts/hamburger
+                    .header__name-block
+                        .name-block
+                            div(style='background-image:url(styles/images/myPhoto.jpg)').autoriz-block-photo-block.circle-photo__block
+                                img.circle-photo__photo(src="styles/images/myPhoto.jpg", alt="myPhoto").visuallyhidden
+                            .autoriz-block-name-block
+                                span.autoriz-block-name Иван Исаков
+                                span.autoriz-block-personal Личный сайт веб разработчика
+                    .header__arrow
+                        include pages/layouts/mixins
+                        a(href="next").header__arrow-link
+                            +icon('icon-arrow_down')
+                    block background-svg
+                    .header__background-svg
+                        +icon("icon-portfolio_header")
+                    .header__background-color
+                    svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 28" preserveAspectRatio="xMidYMin slice").header__triangle.header__triangle_about
+                        polygon(points="0,0 0,28 160,28").header__triangle-part.header__triangle-part_left.header__triangle-part_about.header__triangle-part_left_about
+                        polygon(points="320,0 320,28 160,28").header__triangle-part.header__triangle-part_right.header__triangle-part_about.header__triangle-part_right_about
+            block content
+                main.main-about
+                
+
+
     
